fix: Sassの画像/フォント参照をViteで解決できる形に修正
- url()の相対パスをstyle.scss基準に整理\n- フォントをsrc/assets/fontsへ移動し、ビルドで確実に出力されるように変更

--- a/src/assets/sass/components/_c-pate-top.scss
+++ b/src/assets/sass/components/_c-pate-top.scss
@@ -23,7 +23,7 @@
 .c-page-top__button::before {
   width: rem(40);
   aspect-ratio: 1;
-  background: url(/assets/images/common/arrow_up.svg) no-repeat center / contain;
+  background: url("../images/common/arrow_up.svg") no-repeat center / contain;
   content: "";
 }
 
