--- a/src/assets/sass/components/_p-accordions.scss
+++ b/src/assets/sass/components/_p-accordions.scss
@@ -34,7 +34,7 @@
 .p-accordions__icon {
   width: rem(12);
   aspect-ratio: 12/9;
-  background: url(/assets/images/common/arrow_down.svg) no-repeat center / cover;
+  background: url("../images/common/arrow_down.svg") no-repeat center / cover;
   transition: transform 0.3s ease-out;
 }
 
