--- a/src/assets/sass/base/_root.scss
+++ b/src/assets/sass/base/_root.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: "Noto Sans JP VF";
-  src: url("/fonts/NotoSansJP-VF.woff2") format("woff2");
+  src: url("../fonts/NotoSansJP-VF.woff2") format("woff2");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
