--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,17 +1,14 @@
-@use './global' as *;
 @use "./base/_reset";
 @use "./base/_root";
+@use "./base/_admin-bar";
 @use "./base/_base";
-@use "./layouts/**";
-@use "./demo-components/**"; // demoページ用スタイル
+@use "./layout/**";
 @use "./components/**";
 @use "./utility/**";
+
+@use "./demo-components/**"; // demoページ用スタイル
+
 
 /* デバッグ用のスタイル */
 // html { scroll-behavior: auto; } // ピクパ時に邪魔になる
 // *, *::before, *::after { outline: 1px solid red; } // 横スクロール発見用
-
-.test {
-  background: url("../images/common/arrow_up.svg") no-repeat center / contain;
-  background-color: pink;
-}
