--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -37,7 +37,7 @@ html {
 
 body {
   container-type: inline-size;
-  display: grid;
+  // display: grid;
   /* headerは浮いているので、行数にカウントしない */
   grid-template-rows: 1fr auto;
   min-height: 100vh;
