オリジナル関数にty_の接頭辞／preload／

--- a/src/assets/sass/components-demo/_p-main-top.scss
+++ b/src/assets/sass/components-demo/_p-main-top.scss
@@ -1,5 +1,5 @@
 @use '../global' as *;
 
 .p-main-top {
-  padding-block-start: calc(var(--header-height) + rem(80));
+  // padding-block-start: calc(var(--header-height) + rem(80));
 }
