--- a/src/assets/sass/components/_p-single.scss
+++ b/src/assets/sass/components/_p-single.scss
@@ -20,7 +20,7 @@
 .p-single__meta {
   margin-block-start: rem(20);
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: rem(12);
   @include mq() {
     margin-block-start: rem(30);
@@ -38,28 +38,17 @@
 }
 
 .p-single__term {
-  margin-block-start: 0;
 }
 
 .p-single__term-link {
   display: inline-block;
   padding: rem(4) rem(12);
-  font-size: rem(12);
-  text-decoration: none;
-  border: 1px solid currentColor;
-  border-radius: rem(4);
-  transition: opacity 0.3s;
-  @include mq() {
-    padding: rem(6) rem(16);
-    font-size: rem(14);
-  }
+  border: 1px solid;
 }
 
 .p-single__title {
   margin-block-start: rem(20);
   font-size: rem(24);
-  font-weight: bold;
-  line-height: 1.6;
   @include mq() {
     margin-block-start: rem(30);
     font-size: rem(32);
