--- a/src/assets/sass/components/_p-header.scss
+++ b/src/assets/sass/components/_p-header.scss
@@ -82,6 +82,11 @@
   content: "";
 }
 
+
+.p-header__pc-nav-item.is-current .p-header__pc-nav-link {
+  background-color: skyblue;
+}
+
 // Dropdown (children)
 .p-header__pc-nav-submenu {
   @include mq() {
@@ -116,12 +121,20 @@
 .p-header__pc-nav-submenu-item {
 }
 
+.p-header__pc-nav-submenu-item.is-current {
+
+}
+
 .p-header__pc-nav-submenu-link {
   display: block;
   padding: rem(8) rem(16);
   color: inherit;
   text-decoration: none;
   white-space: nowrap;
+}
+
+.p-header__pc-nav-submenu-item.is-current .p-header__pc-nav-submenu-link {
+  background-color: skyblue;
 }
 
 .p-header__pc-nav-submenu-link:hover,
