カレント表示のロジック共通化

--- a/src/assets/sass/base/_root.scss
+++ b/src/assets/sass/base/_root.scss
@@ -16,6 +16,7 @@
   --color-white: #fff;
   --color-theme: #1b435d;
   --color-accent: #f99f48;
+  --color-current: skyblue;
   --header-height: #{rem(72)};
   --inner: #{rem($inner-sp)};
   --inner-padding: #{rem($padding-sp)};
